--- a/wildfly-11.0.0.Final/standalone/configuration/logging.properties
+++ b/wildfly-11.0.0.Final/standalone/configuration/logging.properties
@@ -20,21 +20,20 @@ logger.com.arjuna.useParentHandlers=true
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
 handler.CONSOLE.level=INFO
 handler.CONSOLE.formatter=COLOR-PATTERN
-handler.CONSOLE.properties=autoFlush,target,enabled
+handler.CONSOLE.properties=enabled,autoFlush,target
+handler.CONSOLE.enabled=true
 handler.CONSOLE.autoFlush=true
 handler.CONSOLE.target=SYSTEM_OUT
-handler.CONSOLE.enabled=true
 
 handler.FILE=org.jboss.logmanager.handlers.PeriodicRotatingFileHandler
 handler.FILE.level=ALL
 handler.FILE.formatter=PATTERN
 handler.FILE.properties=append,autoFlush,enabled,suffix,fileName
-handler.FILE.constructorProperties=fileName,append
 handler.FILE.append=true
 handler.FILE.autoFlush=true
 handler.FILE.enabled=true
 handler.FILE.suffix=.yyyy-MM-dd
-handler.FILE.fileName=/home/andre/Desktop/AluraSteps/Curso-EJB-O-poder-da-Java-EE/wildfly-11.0.0.Final/standalone/log/server.log
+handler.FILE.fileName=/Users/gordo/Desktop/StepsAlura/Curso-EJB-O-poder-da-Java-EE/wildfly-11.0.0.Final/standalone/log/server.log
 
 formatter.PATTERN=org.jboss.logmanager.formatters.PatternFormatter
 formatter.PATTERN.properties=pattern
